build: add owner at end of publishConfig.registry

--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "standard": "*"
   },
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com/"
+    "registry":"https://npm.pkg.github.com/@actions-packages-examples"
   }
 }
